# bbb-html5-video-adapter

./: .gitignore  Makefile.am  configure.ac
src/: gss-program-bbb.c  gss-program-bbb.h  main.c
